--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -370,12 +370,14 @@ resource "aws_route53_record" "cert_alternative" {
 }
 
 ######################## acm ###############################
+{% if aws_region != 'us-east-1' %}
 resource "aws_acm_certificate" "us-east-1" {
   provider = "aws.us-east-1"
   domain_name = "{{ project_name }}.{{ route53_domain_name }}"
   subject_alternative_names = ["{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"]
   validation_method = "DNS"
 }
+{% endif %}
 
 resource "aws_acm_certificate_validation" "default" {
   certificate_arn = "${aws_acm_certificate.default.arn}"
@@ -435,7 +437,13 @@ resource "aws_cloudfront_distribution" "this" {
   }
 
   viewer_certificate {
+  {% if aws_region != 'us-east-1' %}
     acm_certificate_arn = "${aws_acm_certificate.us-east-1.arn}"
+  {% else %}
+    acm_certificate_arn = "${aws_acm_certificate.default.arn}"
+  {% endif %}
     ssl_support_method = "sni-only"
+  }
+  }
   }
 }
