--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -190,6 +190,15 @@ resource "aws_db_instance" "default" {
   }
 }
 
+resource "aws_route53_record" "rds" {
+  zone_id = "${data.aws_route53_zone.selected.zone_id}"
+  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  type = "CNAME"
+  ttl = "300"
+  records = ["${aws_db_instance.default.address}"]
+}
+
+
 resource "aws_alb" "this" {
   name = "tf-ecs-{{ project_name }}-{{ project_deployment_environment }}-alb"
   security_groups = [ "${aws_security_group.this.id}" ]
