--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -199,7 +199,6 @@ resource "aws_route53_record" "rds" {
 {% endif %}
   type = "CNAME"
 
-
   ttl = "300"
   records = ["${aws_db_instance.default.address}"]
 }
@@ -359,9 +358,9 @@ data "aws_route53_zone" "selected" {
 resource "aws_route53_record" "this" {
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
 {% if project_deployment_environment == '' %}
-  name = "rds.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  name = "{{ project_name }}.${data.aws_route53_zone.selected.name}"
 {% else %}
-  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  name = "{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
 {% endif %}
   type = "A"
   alias {
