--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -19,7 +19,7 @@ data "aws_ami" "this" {
 }
 
 
-{% if aws_vpc_default == 'True' %}
+{% if aws_vpc_default == 'true' %}
 resource "aws_default_vpc" "this" {
     tags {
         Name = "Default VPC"
@@ -71,7 +71,7 @@ EOF
 
 resource "aws_autoscaling_group" "ecs" {
 
-  {% if aws_vpc_default == 'True' %}
+  {% if aws_vpc_default == 'true' %}
         vpc_zone_identifier  = ["${aws_default_subnet.a.id}", "${aws_default_subnet.b.id}" , "${aws_default_subnet.c.id}"]
   {% else %}
         vpc_zone_identifier  = ["{{ aws_subnet_id_a }}", "{{ aws_subnet_id_b }}" , "aws_subnet_id_c"]
@@ -98,7 +98,7 @@ resource "aws_autoscaling_group" "ecs" {
 resource "aws_security_group" "this" {
   name        = "tf-ecs-sg-{{ project_name }}-{{ project_deployment_environment }}"
   description = "Container Instance Allowed Ports"
-{% if aws_vpc_default == 'True' %}
+{% if aws_vpc_default == 'true' %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
@@ -148,7 +148,7 @@ resource "aws_ecs_cluster" "cluster" {
 resource "aws_security_group" "rds_security_group" {
   name        = "tf-rds-sg-{{ project_name }}-{{ project_deployment_environment }}"
   description = "Container Instance Allowed Ports"
-{% if aws_vpc_default == 'True' %}
+{% if aws_vpc_default == 'true' %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
@@ -190,19 +190,6 @@ resource "aws_db_instance" "default" {
   }
 }
 
-resource "aws_route53_record" "rds" {
-  zone_id = "${data.aws_route53_zone.selected.zone_id}"
-{% if project_deployment_environment == '' %}
-  name = "rds.{{ project_name }}.${data.aws_route53_zone.selected.name}"
-{% else %}
-  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
-{% endif %}
-  type = "CNAME"
-
-  ttl = "300"
-  records = ["${aws_db_instance.default.address}"]
-}
-
 
 resource "aws_alb" "this" {
   name = "tf-ecs-{{ project_name }}-{{ project_deployment_environment }}-alb"
@@ -210,7 +197,7 @@ resource "aws_alb" "this" {
 
   # Keep these arguments as is:
 
-  {% if aws_vpc_default == 'True' %}
+  {% if aws_vpc_default == 'true' %}
         subnets = [ "${aws_default_subnet.a.id}" , "${aws_default_subnet.b.id}" , "${aws_default_subnet.c.id}"]
   {% else %}
         subnets = [ "{{ aws_subnet_id_a }}" , "{{ aws_subnet_id_b }}" , "{{ aws_subnet_id_c }}"]
@@ -234,7 +221,7 @@ resource "aws_alb_target_group" "this" {
   name = "tf-ecs-{{ project_name }}-alb-tg"
   port = 80
   protocol = "HTTP"
-{% if aws_vpc_default == 'True' %}
+{% if aws_vpc_default == 'true' %}
   vpc_id = "${aws_default_vpc.this.id}"
 {% else %}
   vpc_id = "{{ aws_vpc_id }}"
@@ -350,63 +337,12 @@ resource "aws_iam_role_policy_attachment" "ecs_service_autoscaling_role" {
   policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceAutoscaleRole"
 }
 
-################### route53 ###########################
-data "aws_route53_zone" "selected" {
-  name = "{{ route53_domain_name }}."
-}
-
-resource "aws_route53_record" "this" {
-  zone_id = "${data.aws_route53_zone.selected.zone_id}"
-{% if project_deployment_environment == '' %}
-  name = "{{ project_name }}.${data.aws_route53_zone.selected.name}"
+################### dns record ###########################
+{% if project_zone_cloudflare == 'true' %}
+  {% include './templates/cloudflare.tf.j2' %}
 {% else %}
-  name = "{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  {% include './templates/route53.tf.j2' %}
 {% endif %}
-  type = "A"
-  alias {
-    name = "${aws_cloudfront_distribution.this.domain_name}"
-    zone_id = "${aws_cloudfront_distribution.this.hosted_zone_id}"
-    evaluate_target_health = false
-  }
-}
-
-resource "aws_route53_record" "cert_default" {
-  name = "${aws_acm_certificate.default.domain_validation_options.0.resource_record_name}"
-  type = "${aws_acm_certificate.default.domain_validation_options.0.resource_record_type}"
-  zone_id = "${data.aws_route53_zone.selected.id}"
-  records = ["${aws_acm_certificate.default.domain_validation_options.0.resource_record_value}"]
-  ttl = 60
-}
-
-
-resource "aws_route53_record" "cert_alternative" {
-  name = "${aws_acm_certificate.default.domain_validation_options.1.resource_record_name}"
-  type = "${aws_acm_certificate.default.domain_validation_options.1.resource_record_type}"
-  zone_id = "${data.aws_route53_zone.selected.id}"
-  records = ["${aws_acm_certificate.default.domain_validation_options.1.resource_record_value}"]
-  ttl = 60
-}
-
-######################## acm ###############################
-{% if aws_region != 'us-east-1' %}
-resource "aws_acm_certificate" "us-east-1" {
-  provider = "aws.us-east-1"
-  domain_name = "{{ project_name }}.{{ route53_domain_name }}"
-  subject_alternative_names = ["{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"]
-  validation_method = "DNS"
-}
-{% endif %}
-
-resource "aws_acm_certificate_validation" "default" {
-  certificate_arn = "${aws_acm_certificate.default.arn}"
-  validation_record_fqdns = ["${aws_route53_record.cert_default.fqdn}", "${aws_route53_record.cert_alternative.fqdn}"]
-}
-
-resource "aws_acm_certificate" "default" {
-  domain_name = "{{ project_name }}.{{ route53_domain_name }}"
-  subject_alternative_names = ["{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"]
-  validation_method = "DNS"
-}
 
 ######################### cloudfront #######################
 resource "aws_cloudfront_distribution" "this" {
