--- a/templates/cloudflare.tf.j2
+++ b/templates/cloudflare.tf.j2
@@ -18,9 +18,9 @@ resource "cloudflare_record" "this" {
 resource "cloudflare_record" "rds" {
   domain = "{{ route53_domain_name }}"
 {% if project_deployment_environment == 'prod' %}
-  name = "rds.{{ project_name }}.{{ route53_domain_name }}}"
+  name = "rds.{{ project_name }}.{{ route53_domain_name }}"
 {% else %}
-  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}}"
+  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"
 {% endif %}
   value = "${aws_db_instance.default.address}"
   type = "CNAME"
