--- a/templates/route53.tf.j2
+++ b/templates/route53.tf.j2
@@ -17,6 +17,9 @@ resource "aws_route53_record" "rds" {
 }
 
 resource "aws_route53_record" "this" {
+{% if project_zone_main != "yes" %}
+  count = 0
+{% endif %}
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
 {% if project_deployment_environment == 'prod' %}
   name = "{{ project_name }}.${data.aws_route53_zone.selected.name}"
