added depends lc -> ag in main.tf.j2

--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -69,6 +69,7 @@ EOF
   lifecycle {
     create_before_destroy = true
   }
+  depends_on = ["aws_autoscaling_group.ecs"]
 }
 
 resource "aws_autoscaling_group" "ecs" {
