--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -72,6 +72,7 @@ EOF
 }
 
 resource "aws_autoscaling_group" "ecs" {
+  name = "tf-ecs-asg-{{ project_name }}-{{ project_deployment_environment }}"
 
   {% if aws_vpc_default == 'true' %}
         vpc_zone_identifier  = ["${aws_default_subnet.a.id}", "${aws_default_subnet.b.id}" , "${aws_default_subnet.c.id}"]
