--- a/templates/ecc.tf.j2
+++ b/templates/ecc.tf.j2
@@ -1,5 +1,6 @@
 resource "aws_elasticache_replication_group" "this" {
   replication_group_id          = "tf-ecc-{{ project_name }}-{{ project_deployment_environment }}"
+  replication_group_description = "tf-ecc-{{ project_name }}-{{ project_deployment_environment }}"
   node_type                     = "{{ ecc_node_type }}"
   number_cache_clusters         = {{ ecc_num_cache_nodes }}
   port                          = {{ ecc_port }}
