--- a/templates/rds.tf.j2
+++ b/templates/rds.tf.j2
@@ -11,7 +11,7 @@ resource "aws_security_group" "rds_security_group" {
     from_port = 3306
     to_port = 3306
     protocol = "tcp"
-    cidr_blocks = [ "0.0.0.0/0" ]
+    security_groups = ["${aws_security_group.this.id}"]
   }
 
   egress {
