--- a/templates/cloudflare_ecc.tf.j2
+++ b/templates/cloudflare_ecc.tf.j2
@@ -8,4 +8,5 @@ resource "cloudflare_record" "redis" {
   value = "${aws_elasticache_replication_group.this.primary_endpoint_address}"
   type = "CNAME"
   ttl = 300
+  depends_on = ["aws_elasticache_replication_group.this"]
 }
