--- a/templates/route53_ecc.tf.j2
+++ b/templates/route53_ecc.tf.j2
@@ -9,4 +9,5 @@ resource "aws_route53_record" "redis" {
 
   ttl = 300
   records = ["${aws_elasticache_replication_group.this.primary_endpoint_address}"]
+  depends_on = ["aws_elasticache_replication_group.this"]
 }
