--- a/templates/ecc.tf.j2
+++ b/templates/ecc.tf.j2
@@ -5,7 +5,7 @@ resource "aws_elasticache_replication_group" "this" {
   number_cache_clusters         = {{ ecc_num_cache_nodes }}
   port                          = {{ ecc_port }}
   parameter_group_name          = "{{ ecc_parameter_group_name }}"
-  availability_zones            = ["{{ aws_region }}a", "{{ aws_region }}b"]
+  availability_zones            = ["{{ aws_region }}a", "{{ aws_region }}b", "{{ aws_region }}c"]
   subnet_group_name = "${aws_elasticache_subnet_group.this.name}"
   automatic_failover_enabled    = false
 }
