--- a/templates/cloudflare.tf.j2
+++ b/templates/cloudflare.tf.j2
@@ -25,10 +25,32 @@ resource "cloudflare_record" "rds" {
 {% else %}
   name = "rds.{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"
 {% endif %}
+
+{% if project_zone_rds_cluster == 'true' %}
+  value = "${aws_rds_cluster.default.endpoint}"
+{% else %}
   value = "${aws_db_instance.default.address}"
+{% endif %}
+
   type = "CNAME"
   ttl = 300
 }
+
+{% if project_zone_rds_cluster == 'true' %}
+resource "cloudflare_record" "rds_reader" {
+  domain = "{{ route53_domain_name }}"
+{% if project_deployment_environment == 'prod' %}
+  name = "reader.rds.{{ project_name }}.{{ route53_domain_name }}"
+{% else %}
+  name = "reader.rds.{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"
+{% endif %}
+
+  value = "${aws_rds_cluster.default.reader_endpoint}"
+
+  type = "CNAME"
+  ttl = 300
+}
+{% endif %}
 
 {% if project_ecc == 'true' %}
   {% include './templates/cloudflare_ecc.tf.j2' %}
