--- a/templates/route53.tf.j2
+++ b/templates/route53.tf.j2
@@ -27,9 +27,9 @@ resource "aws_route53_record" "rds" {
 resource "aws_route53_record" "rds_reader" {
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
 {% if project_deployment_environment == 'prod' %}
-  name = "reader.rds.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  name = "ro.rds.{{ project_name }}.${data.aws_route53_zone.selected.name}"
 {% else %}
-  name = "reader.rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
+  name = "ro.rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
 {% endif %}
   type = "CNAME"
 
