fixed error in route53

--- a/templates/route53.tf.j2
+++ b/templates/route53.tf.j2
@@ -43,7 +43,7 @@ resource "aws_route53_record" "rds_reader" {
 {% endif %}
 
 resource "aws_route53_record" "this" {
-{% if project_zone_main != "yes" %}
+{% if project_zone_main != "true" %}
   count = 0
 {% endif %}
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
