--- a/templates/cloudflare.tf.j2
+++ b/templates/cloudflare.tf.j2
@@ -13,43 +13,18 @@ resource "cloudflare_record" "this" {
 {% else %}
   name = "{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"
 {% endif %}
+{% if project_cloudfront_for_alb == 'true' %}
   value  = "${aws_cloudfront_distribution.this.domain_name}"
+{% endif %}
+{% if project_cloudfront_for_lambda == 'true' %}
+   value = "${aws_cloudfront_distribution.website_cdn.domain_name}"
+{% endif %}
   type   = "CNAME"
   ttl    = 300
 }
 
-resource "cloudflare_record" "rds" {
-  domain = "{{ route53_domain_name }}"
-{% if project_deployment_environment == 'prod' %}
-  name = "rds.{{ project_name }}.{{ route53_domain_name }}"
-{% else %}
-  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"
-{% endif %}
-
-{% if project_zone_rds_cluster == 'true' %}
-  value = "${aws_rds_cluster.default.endpoint}"
-{% else %}
-  value = "${aws_db_instance.default.address}"
-{% endif %}
-
-  type = "CNAME"
-  ttl = 300
-}
-
-{% if project_zone_rds_cluster == 'true' %}
-resource "cloudflare_record" "rds_reader" {
-  domain = "{{ route53_domain_name }}"
-{% if project_deployment_environment == 'prod' %}
-  name = "reader.rds.{{ project_name }}.{{ route53_domain_name }}"
-{% else %}
-  name = "reader.rds.{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"
-{% endif %}
-
-  value = "${aws_rds_cluster.default.reader_endpoint}"
-
-  type = "CNAME"
-  ttl = 300
-}
+{% if project_rds == 'true' %}
+  {% include './templates/cloudflare_rds.tf.j2' %}
 {% endif %}
 
 {% if project_ecc == 'true' %}
