--- a/templates/route53.tf.j2
+++ b/templates/route53.tf.j2
@@ -3,39 +3,8 @@ data "aws_route53_zone" "selected" {
   name = "{{ route53_domain_name }}."
 }
 
-resource "aws_route53_record" "rds" {
-  zone_id = "${data.aws_route53_zone.selected.zone_id}"
-{% if project_deployment_environment == 'prod' %}
-  name = "rds.{{ project_name }}.${data.aws_route53_zone.selected.name}"
-{% else %}
-  name = "rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
-{% endif %}
-  type = "CNAME"
-
-  ttl = 300
-
-{% if project_zone_rds_cluster == 'true' %}
-  records = ["${aws_rds_cluster.default.endpoint}"]
-{% else %}
-  records = ["${aws_db_instance.default.address}"]
-{% endif %}
-
-}
-
-{% if project_zone_rds_cluster == 'true' %}
-
-resource "aws_route53_record" "rds_reader" {
-  zone_id = "${data.aws_route53_zone.selected.zone_id}"
-{% if project_deployment_environment == 'prod' %}
-  name = "ro.rds.{{ project_name }}.${data.aws_route53_zone.selected.name}"
-{% else %}
-  name = "ro.rds.{{ project_deployment_environment }}.{{ project_name }}.${data.aws_route53_zone.selected.name}"
-{% endif %}
-  type = "CNAME"
-
-  ttl = 300
-  records = ["${aws_rds_cluster.default.reader_endpoint}"]
-}
+{% if project_rds == 'true' %}
+ {% include './templates/route53_rds.tf.j2' %}
 {% endif %}
 
 {% if project_ecc == 'true' %}
@@ -54,8 +23,14 @@ resource "aws_route53_record" "this" {
 {% endif %}
   type = "A"
   alias {
+{% if project_cloudfront_for_alb == 'true' %}
     name = "${aws_cloudfront_distribution.this.domain_name}"
     zone_id = "${aws_cloudfront_distribution.this.hosted_zone_id}"
+{% endif %}
+{% if project_cloudfront_for_lambda == 'true' %}
+    name = "${aws_cloudfront_distribution.website_cdn.domain_name}"
+    zone_id = "${aws_cloudfront_distribution.website_cdn.hosted_zone_id}"
+{% endif %}
     evaluate_target_health = false
   }
 }
