--- a/templates/cloudfront_for_lambda.tf.j2
+++ b/templates/cloudfront_for_lambda.tf.j2
@@ -67,9 +67,9 @@ resource "aws_cloudfront_distribution" "website_cdn" {
 
   "viewer_certificate" {
   {% if aws_region != 'us-east-1' %}
-    acm_certificate_arn = "${aws_acm_certificate.us-east-1.id}"
+    acm_certificate_id = "${aws_acm_certificate.us-east-1.id}"
   {% else %}
-    acm_certificate_arn = "${aws_acm_certificate.default.id}"
+    acm_certificate_id = "${aws_acm_certificate.default.id}"
   {% endif %}
     ssl_support_method       = "sni-only"
     minimum_protocol_version = "TLSv1"
