--- a/templates/cloudfront_for_lambda.tf.j2
+++ b/templates/cloudfront_for_lambda.tf.j2
@@ -1,6 +1,3 @@
-################################################################################################################
-## Create a Cloudfront distribution for the static website
-################################################################################################################
 resource "aws_cloudfront_distribution" "website_cdn" {
   enabled      = true
   #price_class  = "${var.price_class}"
@@ -20,10 +17,10 @@ resource "aws_cloudfront_distribution" "website_cdn" {
         "TLSv1"]
     }
 
-    # custom_header {
-    #   name  = "User-Agent"
-    #   value = "${var.duplicate-content-penalty-secret}"
-    # }
+    custom_header {
+      name  = "User-Agent"
+      value = "{{ s3_secret }}"
+    }
   }
 
   default_root_object = "index.html"
@@ -54,7 +51,6 @@ resource "aws_cloudfront_distribution" "website_cdn" {
     max_ttl          = "1200"                                             //86400
     target_origin_id = "origin-bucket-{{ project_deployment_environment }}-{{ project_name }}"
 
-    // This redirects any HTTP request to HTTPS. Security first!
     viewer_protocol_policy = "redirect-to-https"
     compress               = true
   }
@@ -67,14 +63,16 @@ resource "aws_cloudfront_distribution" "website_cdn" {
 
   "viewer_certificate" {
   {% if aws_region != 'us-east-1' %}
-    acm_certificate_id = "${aws_acm_certificate.us-east-1.id}"
+    acm_certificate_arn = "${aws_acm_certificate.us-east-1.arn}"
   {% else %}
-    acm_certificate_id = "${aws_acm_certificate.default.id}"
+    acm_certificate_arn = "${aws_acm_certificate.default.arn}"
   {% endif %}
     ssl_support_method       = "sni-only"
     minimum_protocol_version = "TLSv1"
   }
 
   aliases = ["{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"]
+
+  depends_on = ["aws_acm_certificate_validation.default"]
 
 }
