--- a/templates/route53.tf.j2
+++ b/templates/route53.tf.j2
@@ -12,7 +12,7 @@ data "aws_route53_zone" "selected" {
 {% endif %}
 
 resource "aws_route53_record" "this" {
-{% if project_zone_main != "true" %}
+{% if main_dns_record_create == "false" %}
   count = 0
 {% endif %}
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
