--- a/templates/cloudfront_for_alb.tf.j2
+++ b/templates/cloudfront_for_alb.tf.j2
@@ -15,7 +15,12 @@ resource "aws_cloudfront_distribution" "this" {
 
   }
   enabled = true
+
+{% if project_deployment_environment == 'prod' %}
+  aliases = ["{{ project_name }}.{{ route53_domain_name }}"]
+{% else %}
   aliases = ["{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"]
+{% endif %}
 
   default_cache_behavior {
     allowed_methods = ["HEAD", "DELETE", "POST", "GET", "OPTIONS", "PUT", "PATCH"]
