--- a/templates/elasticache.tf.j2
+++ b/templates/elasticache.tf.j2
@@ -1,10 +1,10 @@
 resource "aws_elasticache_replication_group" "this" {
-  replication_group_id          = "tf-ecc-{{ project_name }}-{{ project_deployment_environment }}"
-  replication_group_description = "tf-ecc-{{ project_name }}-{{ project_deployment_environment }}"
-  node_type                     = "{{ ecc_node_type }}"
-  number_cache_clusters         = {{ ecc_num_cache_nodes }}
-  port                          = {{ ecc_port }}
-  parameter_group_name          = "{{ ecc_parameter_group_name }}"
+  replication_group_id          = "tf-elasticache-{{ project_name }}-{{ project_deployment_environment }}"
+  replication_group_description = "tf-elasticache-{{ project_name }}-{{ project_deployment_environment }}"
+  node_type                     = "{{ elasticache_node_type }}"
+  number_cache_clusters         = {{ elasticache_num_cache_nodes }}
+  port                          = {{ elasticache_port }}
+  parameter_group_name          = "{{ elasticache_parameter_group_name }}"
   availability_zones = ["${data.aws_availability_zones.available.names[0]}", "${data.aws_availability_zones.available.names[1]}", "${data.aws_availability_zones.available.names[2]}"]
   subnet_group_name = "${aws_elasticache_subnet_group.this.name}"
   automatic_failover_enabled    = false
@@ -12,8 +12,8 @@ resource "aws_elasticache_replication_group" "this" {
 }
 
 resource "aws_security_group" "redis" {
-  name        = "tf-ecc-sg-redis-{{ project_name }}-{{ project_deployment_environment }}"
-  description = "elasticache"
+  name        = "tf-elasticache-sg-redis-{{ project_name }}-{{ project_deployment_environment }}"
+  description = "{{ project_name | title }} Elasticache {{ project_deployment_environment | title }}"
 
 {% if aws_vpc_default == 'true' %}
   vpc_id = "${aws_default_vpc.this.id}"
@@ -36,12 +36,12 @@ resource "aws_security_group" "redis" {
   }
 
   tags {
-    Name = "tf-ecc-eg-redis-{{ project_name }}-{{ project_deployment_environment }}"
+    Name = "tf-elasticache-eg-redis-{{ project_name }}-{{ project_deployment_environment }}"
   }
 }
 
 resource "aws_elasticache_subnet_group" "this" {
-  name       = "tf-ecc-subnet-{{ project_name }}-{{ project_deployment_environment }}"
+  name       = "tf-elasticache-subnet-{{ project_name }}-{{ project_deployment_environment }}"
 {% if aws_vpc_default == 'true' %}
   subnet_ids = ["${aws_default_subnet.a.id}", "${aws_default_subnet.b.id}", "${aws_default_subnet.c.id}"]
 {% else %}
