--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -73,8 +73,8 @@ resource "aws_default_subnet" "c" {
 
 ##### redis #####
 
-{% if project_ecc == 'true' %}
-  {% include './templates/ecc.tf.j2' %}
+{% if project_elasticache == 'true' %}
+  {% include './templates/elasticache.tf.j2' %}
 {% endif %}
 
 ##### s3 ######
