--- a/templates/aws_policies/static_iam_user_policy.json.j2
+++ b/templates/aws_policies/static_iam_user_policy.json.j2
@@ -12,13 +12,22 @@
         {
             "Effect": "Allow",
             "Action": [
-                "s3:ListAllMyBuckets",
+                "s3:GetBucketLocation",
+                "s3:ListBucket"
+            ],
+            "Resource": [
+                "arn:aws:s3:::{{ s3_bucket_name }}"
+            ]
+        },
+        {
+            "Effect": "Allow",
+            "Action": [
                 "s3:GetObject",
                 "s3:PutObject",
                 "s3:PutObjectAcl",
             ],
             "Resource": [
-                "arn:aws:s3:::{{ bucket_name }}/*"
+                "arn:aws:s3:::{{ s3_bucket_name }}/*"
             ]
         },
         {
