--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -73,12 +73,12 @@ resource "aws_default_subnet" "c" {
 
 ##### redis #####
 
-{% if project_elasticache == 'true' %}
-  {% include './templates/elasticache.tf.j2' %}
-{% endif %}
+#{% if project_elasticache == 'true' %}
+#  {% include './templates/elasticache.tf.j2' %}
+#{% endif %}
 
 ##### s3 ######
 
-# {% if project_s3 == 'true' %}
-#   {% include './templates/s3.tf.j2' %}
-# {% endif %}
+{% if project_s3 == 'true' %}
+  {% include './templates/s3.tf.j2' %}
+{% endif %}
