--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -67,15 +67,15 @@ resource "aws_default_subnet" "c" {
   {% include './templates/cloudfront_for_alb.tf.j2' %}
 {% endif %}
 
-{% if project_cloudfront_for_lambda == 'true' %}
-  {% include './templates/cloudfront_for_s3.tf.j2' %}
-{% endif %}
+#{% if project_cloudfront_for_lambda == 'true' %}
+#  {% include './templates/cloudfront_for_s3.tf.j2' %}
+#{% endif %}
 
 ##### redis #####
 
-#{% if project_elasticache == 'true' %}
-#  {% include './templates/elasticache.tf.j2' %}
-#{% endif %}
+{% if project_elasticache == 'true' %}
+  {% include './templates/elasticache.tf.j2' %}
+{% endif %}
 
 ##### s3 ######
 
