--- a/templates/cloudfront_for_alb.tf.j2
+++ b/templates/cloudfront_for_alb.tf.j2
@@ -15,7 +15,7 @@ resource "aws_cloudfront_distribution" "this" {
 
   }
   enabled = true
-  aliases = ["{{ project_deployment_environment }}.{{ project_name }}.{{ route53_domain_name }}"]
+  aliases = ["{{ project_deployment_environment }}.{{ project_name }}.{{ project_env_zone }}"]
 
   default_cache_behavior {
     allowed_methods = ["HEAD", "DELETE", "POST", "GET", "OPTIONS", "PUT", "PATCH"]
