--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -71,3 +71,9 @@ resource "aws_default_subnet" "c" {
   {% include './templates/cloudfront_for_s3.tf.j2' %}
 {% endif %}
 
+##### redis #####
+
+{% if project_elasticache == 'true' %}
+  {% include './templates/elasticache.tf.j2' %}
+{% endif %}
+
