--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -77,3 +77,8 @@ resource "aws_default_subnet" "c" {
   {% include './templates/elasticache.tf.j2' %}
 {% endif %}
 
+##### s3 ######
+
+{% if project_s3 == 'true' %}
+  {% include './templates/s3.tf.j2' %}
+{% endif %}
