--- a/templates/s3.tf.j2
+++ b/templates/s3.tf.j2
@@ -52,7 +52,26 @@ resource "aws_iam_policy" "site_deployer_policy" {
   description = "Policy allowing to publish a new version of the website to the S3 bucket"
   policy      = <<EOF
 {
-    
+    "Version": "2012-10-17",
+    "Statement": [
+
+        {
+            "Effect": "Allow",
+            "Action": [
+                "s3:GetObject",
+                "s3:PutObject",
+                "s3:PutObjectAcl",
+            ],
+            "Resource": "arn:aws:s3:::{{ s3_bucket_name }}/*"
+        },
+        {
+            "Effect": "Allow",
+            "Action": [
+                "s3:ListAllMyBuckets"
+            ],
+            "Resource": "*"
+        }
+    ]
 }
 EOF
 }
