--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -7,7 +7,7 @@ provider "aws" {
     alias = "us-east-1"
 }
 
-data "aws_availability_zones" "available" {}
+# data "aws_availability_zones" "available" {}
 
 {% if aws_vpc_default == 'true' %}
 resource "aws_default_vpc" "this" {
