--- a/templates/cloudfront_for_s3.tf.j2
+++ b/templates/cloudfront_for_s3.tf.j2
@@ -5,7 +5,7 @@ resource "aws_cloudfront_distribution" "website_cdn" {
 
   "origin" {
     origin_id   = "s3-{{ s3_bucket_name }}"
-    domain_name = "${aws_s3_bucket.website_bucket.website_endpoint}"
+    domain_name = "${aws_s3_bucket.website_bucket.bucket_domain_name}"
 
     custom_origin_config {
       origin_protocol_policy = "http-only"
