--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -7,31 +7,31 @@ provider "aws" {
     alias = "us-east-1"
 }
 
-# data "aws_availability_zones" "available" {}
-
-{% if aws_vpc_default == 'true' %}
-resource "aws_default_vpc" "this" {
-    tags {
-        Name = "Default VPC"
-    }
-}
-
-resource "aws_default_subnet" "a" {
-  availability_zone = "{{ aws_region }}a"
-}
-
-resource "aws_default_subnet" "b" {
-  availability_zone = "{{ aws_region }}b"
-}
-
-resource "aws_default_subnet" "c" {
-  availability_zone = "{{ aws_region }}c"
-}
-{% endif %}
-
 ##### ecs #####
 
 {% if project_ecs == 'true' %}
+  data "aws_availability_zones" "available" {}
+
+  {% if aws_vpc_default == 'true' %}
+  resource "aws_default_vpc" "this" {
+      tags {
+          Name = "Default VPC"
+      }
+  }
+
+  resource "aws_default_subnet" "a" {
+    availability_zone = "{{ aws_region }}a"
+  }
+
+  resource "aws_default_subnet" "b" {
+    availability_zone = "{{ aws_region }}b"
+  }
+
+  resource "aws_default_subnet" "c" {
+    availability_zone = "{{ aws_region }}c"
+  }
+  {% endif %}
+
   {% include './templates/ecs.tf.j2' %}
 {% endif %}
 
