--- a/templates/alb.tf.j2
+++ b/templates/alb.tf.j2
@@ -1,6 +1,6 @@
 resource "aws_alb" "this" {
   name = "tf-ecs-{{ project_name }}-{{ project_deployment_environment }}-alb"
-  security_groups = [ "${aws_security_group.this.id}" ]
+  security_groups = [ "${aws_security_group.alb.id}" ]
 
   # Keep these arguments as is:
 
@@ -10,6 +10,27 @@ resource "aws_alb" "this" {
         subnets = [ "{{ aws_subnet_id_a }}" , "{{ aws_subnet_id_b }}" , "{{ aws_subnet_id_c }}"]
   {% endif %}
   internal = false
+}
+
+resource "aws_security_group" "alb" {
+  name        = "tf-alb-sg-{{ project_name }}-{{ project_deployment_environment }}"
+
+{% if aws_vpc_default == 'true' %}
+  vpc_id = "${aws_default_vpc.this.id}"
+{% else %}
+  vpc_id = "{{ aws_vpc_id }}"
+{% endif %}
+
+  ingress {
+      from_port = 443
+      to_port = 443
+      protocol = "tcp"
+      cidr_blocks = ["0.0.0.0/0"]
+  }
+
+  tags {
+    Name = "tf-alb-sg-{{ project_name }}-{{ project_deployment_environment }}"
+  }
 }
 
 resource "aws_alb_listener" "default" {
