--- a/templates/ecs.tf.j2
+++ b/templates/ecs.tf.j2
@@ -83,7 +83,7 @@ resource "aws_security_group" "this" {
     from_port = 22
     to_port = 22
     protocol = "tcp"
-    cidr_blocks = {{ ecs_sg_cidr_blocks| regex_replace('\'', '\"') }}
+    cidr_blocks = {{ ecs_sg_cidr_blocks | replace('\'', '\"') | replace('u', '') }}
   }
 
   ingress {
