--- a/templates/s3.tf.j2
+++ b/templates/s3.tf.j2
@@ -6,7 +6,7 @@ resource "aws_s3_bucket" "website_bucket" {
   website {
     index_document = "index.html"
   }
-  
+
   policy  = <<EOF
 {
     "Version": "2012-10-17",
@@ -17,7 +17,7 @@ resource "aws_s3_bucket" "website_bucket" {
             "Principal": {
                 "AWS": [
                     "${aws_iam_user.deployer.arn}"
-                ] 
+                ]
             },
             "Action": [
                 "s3:GetBucketLocation",
@@ -54,7 +54,7 @@ EOF
 
 resource "aws_iam_policy" "site_deployer_policy" {
   provider    = "aws.{{ aws_region }}"
-  name        = "deployer.{{ project_name }}.{{ project_env_name }}"
+  name        = "deployer.{{ project_name }}.{{ project_deployment_environment }}"
   path        = "/"
   description = "Policy allowing to publish a new version of the website to the S3 bucket"
   policy      = "${data.aws_iam_policy_document.user.json}"
