--- a/templates/aws_policies/static_iam_user_policy.tf.j2
+++ b/templates/aws_policies/static_iam_user_policy.tf.j2
@@ -3,7 +3,7 @@ data "aws_iam_policy_document" "user" {
     sid = "1"
 
     effect = "Allow"
-    
+
     actions = [
       "cloudfront:ListDistributions",
       "cloudfront:CreateInvalidation"
@@ -51,12 +51,13 @@ data "aws_iam_policy_document" "user" {
     effect = "Allow"
 
     actions = [
-      sts:AssumeRole
+      "sts:AssumeRole"
     ]
 
-    principals = [
-      "Service": "lambda.amazonaws.com"
-    ]
+    principals = {
+      type = "Service"
+      identifiers = ["lambda.amazonaws.com"]
+    }
   }
 
 }
