added project_ecs_sg_only & project_alb_sg_only

--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -33,6 +33,34 @@ provider "aws" {
   {% endif %}
 
   {% include './templates/ecs.tf.j2' %}
+  {% include './templates/ecs_sg.tf.j2' %}
+{% endif %}
+
+{% if project_ecs_sg_only == 'true' %}
+
+data "aws_availability_zones" "available" {}
+
+  {% if aws_vpc_default == 'true' %}
+  resource "aws_default_vpc" "this" {
+      tags {
+          Name = "Default VPC"
+      }
+  }
+
+  resource "aws_default_subnet" "a" {
+    availability_zone = "{{ aws_region }}a"
+  }
+
+  resource "aws_default_subnet" "b" {
+    availability_zone = "{{ aws_region }}b"
+  }
+
+  resource "aws_default_subnet" "c" {
+    availability_zone = "{{ aws_region }}c"
+  }
+  {% endif %}
+
+  {% include './templates/alb_sg.tf.j2' %}
 {% endif %}
 
 ##### rds ######
@@ -45,7 +73,13 @@ provider "aws" {
 
 {% if project_alb == 'true' %}
   {% include './templates/alb.tf.j2' %}
+  {% include './templates/alb_sg.tf.j2' %}
 {% endif %}
+
+{% if project_alb_sg_only == 'true' %}
+  {% include './templates/alb_sg.tf.j2' %}
+{% endif %}
+
 
 ##### iam #####
 
