added var project_zone_route53

--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -91,7 +91,7 @@ data "aws_availability_zones" "available" {}
 
 {% if project_zone_cloudflare == true %}
   {% include './templates/cloudflare.tf.j2' %}
-{% else %}
+{% if project_zone_route53 == true %}
   {% include './templates/route53.tf.j2' %}
 {% endif %}
 
