--- a/templates/main.tf.j2
+++ b/templates/main.tf.j2
@@ -9,7 +9,7 @@ provider "aws" {
 
 ##### ecs #####
 
-  data "aws_availability_zones" "available" {}
+data "aws_availability_zones" "available" {}
 
 {% if aws_vpc_default == 'true' %}
   resource "aws_default_vpc" "this" {
@@ -68,6 +68,7 @@ provider "aws" {
 
 {% if project_zone_cloudflare == true %}
   {% include './templates/cloudflare.tf.j2' %}
+{% endif %}
 
 {% if project_zone_route53 == true %}
   {% include './templates/route53.tf.j2' %}
